Fixed top of title hitbox with spacer div. Fixed alignment of footer link, added padding to it.

--- a/css/main.css
+++ b/css/main.css
@@ -83,17 +83,21 @@ body {
   align-self: center;
 }
 
+.spacer {
+  height: 8vh;
+}
+
 .title {
-  width: 50%;
   margin-right: 50vw;
   margin-bottom: 5vh;
+  width: 50%;
 }
 .title a {
+  margin-right: 50vw;
+  margin-left: 15vw;
   text-decoration: none;
   transition: all 250ms ease-in-out;
   width: 30vw;
-  margin-left: 15vw;
-  margin-right: 50vw;
   display: block;
 }
 .title a:hover {
@@ -105,11 +109,11 @@ body {
   margin-left: -0.325vW;
   margin-right: none;
   padding-right: -1;
+  padding-top: 2vh;
+  padding-bottom: 1vh;
   align-content: left;
   font-size: 4.2em;
   color: #F7F7FF;
-  padding-top: 10vh;
-  padding-bottom: 1vh;
   font-family: "Jost", sans-serif;
   font-weight: 200;
   font-variant: small-caps;
@@ -127,6 +131,7 @@ body {
 }
 .title h2 {
   margin-top: 0vh;
+  margin-right: 20vw;
   align-content: left;
   font-size: 2.2em;
   color: #F4BBD3;
@@ -139,10 +144,10 @@ body {
 
 .indextext {
   margin-top: 7.5vh;
+  padding-left: 15.15vw;
   color: #F7F7FF;
   font-family: "Exo", sans-serif;
   font-size: 0.9em;
-  padding-left: 15.15vw;
   line-height: 2.758;
   font-weight: inherit;
 }
@@ -157,13 +162,19 @@ body {
 }
 
 #footer {
-  align-content: center;
+  margin-left: 30vw;
+  margin-right: 309vw;
+  margin-top: 0.2vh;
+  margin-bottom: 0.8vh;
+  padding-top: 0.4vh;
+  padding-bottom: 0.8vh;
   text-decoration: none;
   color: #2AB7CA;
-  text-align: center;
   font-family: "Muli", sans-serif;
   font-weight: 300;
   font-size: 0.75em;
+  display: flex;
+  justify-content: center;
 }
 
 ::-webkit-scrollbar {
